# mcp-shell-server

./: Dockerfile  pyproject.toml
