[project]
name = "mcp-shell-server"
description = "MCP Shell Server - Execute shell commands via MCP protocol"
authors = [{ name = "tumf" }]
dependencies = [
    "h11>=0.16.0",
    "mcp>=1.1.2",
    "fastmcp>=0.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.scripts]
mcp-shell-server = "mcp_shell_server:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-env>=1.1.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "ruff>=0.0.262",
]
